<resources>
    <string name="app_name">My_vodka</string>
    <string name="button_send" />
    <string name="player_button">Player Button</string>
    <string name="de_l_alcool">De l\'alcool</string>
    <string name="taux_d_alcool_mie">Taux d\'alcoolémie</string>
    <string name="togglemenu">toggleMenu</string>
    <string name="menu_item_2">Menu Item 2</string>
    <string name="menu_item_1">Menu Item 1</string>
    <string name="test">test</string>
    <string name="hello">hello</string>
    <string name="example_text">Example Text</string>
    <string name="sound_preference">Son</string>
    <string name="music_preference">Musique</string>
    <string name="notifications_preference">Notifications</string>
    <string name="social_network_preference">Réseau social</string>
    <string name="reset_progress_preference">Réinitialiser le progrès</string>
    <string name="advanced_settings_preference">Paramètres avancés</string>
</resources>