<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OptionsActivity">

    <FrameLayout
        android:id="@+id/settings_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <CheckBox
            android:id="@+id/sound_preference"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/sound_preference"
            android:text="Sound" />

        <CheckBox
            android:id="@+id/music_preference"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/music_preference"
            android:text="Music" />

        <CheckBox
            android:id="@+id/notifications_preference"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/notifications_preference"
            android:text="Notifications" />

        <Button
            android:id="@+id/advanced_settings_preference"
            android:layout_width="90dp"
            android:layout_height="110dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/advanced_settings_preference"
            android:text="Advanced" />

        <Button
            android:id="@+id/social_network_preference"
            android:layout_width="90dp"
            android:layout_height="110dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/social_network_preference"
            android:text="Social" />

        <Button
            android:id="@+id/reset_progress_preference"
            android:layout_width="90dp"
            android:layout_height="110dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/reset_progress_preference"
            android:text="Reset" />

    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
